[package]
name = "hexcat"
version = "2.0.0"
edition = "2018"
license-file = "LICENSE"
description = "A hex display with Unicode symboles for specials."
homepage = "https://github.com/TylerMackJ/Hexcat"
documation = "https://github.com/TylerMackJ/Hexcat"
respository = "https://github.com/TylerMackJ/Hexcat"
readme = "README.md"
