[package]
name = "hexcat"
version = "2.1.1"
edition = "2018"
license-file = "LICENSE"
description = "A hex display with Unicode symboles for specials."
homepage = "https://github.com/TylerMackJ/Hexcat"
documation = "https://github.com/TylerMackJ/Hexcat"
respository = "https://github.com/TylerMackJ/Hexcat"
readme = "README.md"
