[package]
name = "hexcat"
version = "2.3.1"
authors = ["Tyler Johnson <TylerMackJ@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "A hex display with Unicode symboles for specials."
homepage = "https://github.com/TylerMackJ/Hexcat"
documation = "https://github.com/TylerMackJ/Hexcat"
repository = "https://github.com/TylerMackJ/Hexcat"
readme = "README.md"
